# ign-foo

./: CMakeLists.txt
include/ignition/foo/: foo-base.hh  foo1.hh
src/: CMakeLists.txt  foo1.cc
staging/include/ignition/foo/: CMakeLists.txt
staging/include/ignition/foo/staging/: foo-base.hh  foo1.hh
staging/src/: CMakeLists.txt  foo1.cc
